@@ -1,4 +1,4 @@
-FROM azul/zulu-openjdk-debian:8 as runner
+FROM azul/zulu-openjdk-debian:11 as runner
 
 RUN mkdir -p /app/libs
 
@@ -8,4 +8,4 @@ WORKDIR /
 
 EXPOSE 8080
 
-CMD java -jar /app/operations-app.jar
+CMD java --add-modules java.xml.ws -jar /app/operations-app.jar
